crates/plotnik-lib/tests/04-emit/linking/unknown_field_no_suggestion.txt
Q = (function_declaration
    xyzzy: (identifier) @name) @fn
==== diagnostics ====
error: `xyzzy` is not a valid field
 --> query.ptk:2:5
  |
2 |     xyzzy: (identifier) @name) @fn
  |     ^^^^^
